# Jarvise_agent

./: .env.example  README.md  main.py  pyproject.toml  rebuild_exe.ps1  requirements-dev.txt  requirements-voice.txt  requirements.txt  run_exe.ps1
agents/: automation.py  base.py  browser.py  coding.py  desktop.py  registry.py  research.py
ai/: __init__.py  brain.py  gateway.py  providers.py
api/: app.py  routes.py  schemas.py
automation/: __init__.py  autohotkey.py  launcher.py  system_control.py
brain/: __init__.py  brain.py
character/: __init__.py  character.py  engine.py
config/: default.yaml  local.example.yaml  settings.py
core/: __init__.py  actions.py  commands.py  decision_engine.py  events.py  orchestrator.py  orchestrator_v2.py  security.py  task_manager.py
native/: CMakeLists.txt  README.md  main.cpp
native/audio/: AudioTypes.h  WasapiCapture.cpp  WasapiCapture.h
native/clap_detection/: ClapDetector.cpp  ClapDetector.h
native/config/: Config.cpp  Config.h  JsonValue.cpp  JsonValue.h  config.json
native/docs/: ARCHITECTURE.md  ROADMAP.md
native/launcher/: WorkspaceLauncher.cpp  WorkspaceLauncher.h
native/resources/sounds/: README.md
native/scripts/: build.ps1
native/spotify/: SpotifyController.cpp  SpotifyController.h
native/system/: AutoRun.cpp  AutoRun.h  ConfigWatcher.cpp  ConfigWatcher.h  Logger.cpp  Logger.h  ProcessUtils.cpp  ProcessUtils.h  SingleInstance.cpp  SingleInstance.h  StartupSound.cpp  StartupSound.h  StringUtils.cpp  StringUtils.h  TrayIcon.cpp  TrayIcon.h
native/ui/: OverlayWindow.cpp  OverlayWindow.h
(+69 files in other folders)
